@@ -1,0 +1,57 @@
+Summary: Program for converting bitmaps to vector graphics
+Name: @PACKAGE@
+Version: @VERSION@
+Release: 1
+Url: http://autotrace.sourceforge.net
+Source: %{name}-%{version}.tar.gz
+Copyright: GPL
+Group: Applications/Graphics
+BuildRoot: %{_tmppath}/%{name}-root
+
+%description
+AutoTrace is a program for converting bitmaps to vector graphics. The
+aim of the AutoTrace project is the development of a freely-available
+application similar to CorelTrace or Adobe Streamline. In some
+aspects it is already better. Originally being created as a plugin
+for the GIMP, AutoTrace is now a standalone program and can be
+compiled on any UNIX platform using GCC.
+
+
+%prep
+%setup -q
+
+%build
+./configure --prefix=/usr/local
+make
+
+%install
+rm -rf $RPM_BUILD_ROOT
+make prefix=$RPM_BUILD_ROOT/usr/ install
+
+%clean
+rm -rf $RPM_BUILD_ROOT
+
+%files
+%defattr(-,root,root)
+%doc /usr/man/man1/autotrace.1
+
+/usr/include/autotrace/autotrace.h
+/usr/lib/pkgconfig/autotrace.pc
+/usr/include/autotrace/types.h
+/usr/lib/libautotrace.a
+/usr/include/autotrace/exception.h
+/usr/include/autotrace/input.h
+/usr/share/aclocal/autotrace.m4
+/usr/bin/autotrace-config
+/usr/bin/autotrace
+
+%changelog
+
+* Thu Mar  7 11:24:13 2002 Masatake YAMATO<yamato@redhat.com>
+
+- Change %description.
+- Update files.
+
+* Thu Feb 21 2002 Han-Wen Nienhuys <hanwen@cs.uu.nl>
+- Initial build.
+
